[package]
name = "htor"
version = "0.1.0"
authors = ["Noah Kim <noahbkim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1.0"
elf = "0.0.10"
clap = "2.33.3"
pest = "2.1.3"
pest_derive = "2.1.0"
